[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "portale"
version = "0.9.9"
description = "Requests based HTTP/REST API client with flexible cache support"
readme = "README.md"
authors = [
    {name = "Shekhar Tiwatne", email = "pythonic@gmail.com"},
]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "walrus",
]

[project.urls]
Homepage = "http://pypi.python.org/pypi/portale/"

[project.optional-dependencies]
pyreqwest = ["pyreqwest"]

[tool.setuptools]
packages = {find = {}}
include-package-data = true
